Changelog
=========

12.3-dev0 - (unreleased)
---------------------------

12.2 - (2021-10-12)
---------------------------
* Bug fix: Fix @eea.relations RestAPI endpoint title and description
  [avoinea refs #139536]

12.1 - (2021-09-21)
---------------------------
* Patch: added patched_getRefs in order to patch retrieval of references
  for archetypes to skip None values as you can add a reference when logged in
  for which you cannot access when you are anonymous
  [ichim-david refs #134485]
* Change: Modified ContentTypeLookUp so that it gets the right portal factory
  when adding a new object
  [iulianpetchesi refs #120841]

12.0 - (2021-09-10)
---------------------------
* Change: Refs #134485 return dexterity results in forward backward and auto relations
  [ichim-david refs #134485]
* Patch: Archetypes reference engine
  [ichim-david refs #134485]
* Patch: Archetypes referenceable
  [ichim-david refs #134485]

11.7 - (2021-03-29)
---------------------------
* Feature: added the new custom_css property to all facet widgets.
  [alecghica refs #126549]

11.6 - (2020-11-17)
---------------------------
* Bug fix: ensure relatedItems reference widget doesn't crash
  when its not initialized on a dexterity content type
  [ichim-david refs #121889]

11.5 - (2020-10-22)
---------------------------
* Feature: Added dexterity widget for relatedItems
  [iulianpetchesi #121889]
* Change: added notoc class to related content header as it
  shouldn't appear in the body toc portlet
  [ichim-david refs #119674]

11.4 - (2020-09-23)
---------------------------
* Change: Related items now also appear for dexterity objects, not only archetypes
  [iulianpetchesi #120841]

11.3 - (2020-09-18)
---------------------------
* Change: use Type for photoALbumEntryType first then portal_type when setting
  photoAlbumEntryType
  [ichim-david refs #117296]

11.2 - (2020-06-26)
---------------------------
* Feature: added draft or archived info within photoAlbumEntry